# x_likes_downloader

./: .gitignore  Cargo.toml  README.md  env.example
.cursor/commands/: opsx-bulk-archive.md  opsx-continue.md  opsx-onboard.md  opsx-sync.md  opsx-verify.md
.gemini/commands/opsx/: bulk-archive.toml  continue.toml  onboard.toml  sync.toml  verify.toml
.github/workflows/: build.yml  release.yml  reusable-quality-checks.yml
openspec/: config.yaml
openspec/changes/archive/2026-02-25-add-username-alias/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-add-username-alias/specs/username-alias/: spec.md
openspec/changes/archive/2026-02-25-fix-filename-parsing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-fix-filename-parsing/specs/username-alias/: spec.md
openspec/specs/username-alias/: spec.md
release/: VERSION
scripts/: build.sh  release.sh  version.sh
src/: config.rs  downloader.rs  main.rs  organize_files.rs  organize_files_test.rs  setup.rs  updater.rs  x_api.rs
