[package]
name = "x_likes_downloader"
version = "1.0.4"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
regex = "1.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
futures-util = "0.3"
indicatif = "0.17"
urlencoding = "2.1"
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }
